/*
* HelloWorld入门示例
*/

//使用proto3语法
syntax = "proto3";

//proto包名
package domain;
//生成多个Java文件
option java_multiple_files = true;
//指定Java包名
option java_package = "com.pdms.grpc.domain";
//指定Java输出类名
option java_outer_classname = "SubStationStatusProto";



//gRPC服务定义
service SubStationStatus {
  //gRPC服务方法定义 - Unary
  rpc GetStatusStatistics (SubStationStatusRequest) returns (SubStationStatusReply) {}

  rpc GetAllStationStatusRequest (AllStationStatusRequest) returns (AllStationStatusReply) {}
}

//子站请求参数定义
message SubStationStatusRequest {
  string substationId = 1;
}

//全站请求参数定义
message AllStationStatusRequest {
}
//全站响应结果定义
message AllStationStatusReply {
  //在线率
  string onlineRate = 1;
  //MMS通信率
  string mmsRate = 2;
  //GOOSE通信率
  string gooseRate = 3;
  //SMV通信率
  string smvRate = 4;
}

//子站响应结果定义
message SubStationStatusReply {
  //在线率
  string onlineRate = 1;
  //MMS通信率
  string mmsRate = 2;
  //GOOSE通信率
  string gooseRate = 3;
  //SMV通信率
  string smvRate = 4;
  //当前站点的运行状态
  string status = 5;

}
